# phirepass-rs

./: Cargo.toml  PLAN.md  README.md  test.sh
.github/workflows/: release.yml
agent/: Dockerfile
agent/sandbox/: Dockerfile
agent/src/: agent.rs  cli.rs  creds.rs  env.rs  main.rs  ws.rs
agent/src/sftp/: connection.rs
agent/src/sftp/actions/: download.rs  upload.rs
agent/src/ssh/: connection.rs  session.rs
agent/sshd/: Dockerfile
channel/: Cargo.toml
channel/public/: phirepass.js
channel/src/: lib.rs
common/: Cargo.toml
common/src/: ip.rs  lib.rs  runtime.rs
common/src/protocol/: node.rs  web.rs
relay/: Cargo.toml  Dockerfile
relay/src/: proxy.rs
relay/src/db/: redis.rs
server/: Dockerfile
server/migrations/: 0001_step1_nodes_claim.sql  0002_step1_pat_scope_support.sql
server/src/: env.rs  http.rs  node.rs  node_auth.rs  server.rs  tasks.rs  web.rs
server/src/db/: common.rs  postgres.rs  redis.rs
