[package]
name = "phirepass"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[badges]
maintenance = { status = "experimental" }

[workspace]
members = ["agent", "common", "server", "channel", "relay"]

[workspace.package]
version = "0.1.132"
edition = "2024"
repository = "https://github.com/dimitrmo/phirepass-rs"
license-file = "LICENCE"

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "agent"
path = "agent/src/main.rs"

[[bin]]
name = "relay"
path = "relay/src/main.rs"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
phirepass-common = { workspace = true, features = ["full"] }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
bytes = { workspace = true }
russh = { workspace = true }
clap = { workspace = true }
envconfig = { workspace = true }
axum-client-ip = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tower-http = { workspace = true }
russh-sftp = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
rpassword = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
secrecy = { workspace = true }
whoami = { workspace = true }
redis = { workspace = true }
stunclient = { workspace = true }
local-ip-address = { workspace = true }
pingora = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }

[workspace.dependencies]
thiserror = "2.0.18"
russh = { version =  "0.57.1" }
russh-sftp = { version = "2.1.1"}
tokio = { version = "1.49.0", features = ["full"]}
tokio-util = "0.7.18"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bytes = { version = "1.11.1", features = ["serde"] }
axum = { version = "0.8.8", features = ["ws"]}
anyhow = "1.0.102"
env_logger = "0.11.9"
log = "0.4.29"
rmp-serde = "1.3.1"
futures-util = "0.3.31"
clap = { version = "4.5.60", features = ["derive"] }
phirepass-common = { path = "common" }
envconfig = "0.11.1"
axum-client-ip = { version = "1.3.1", features = ["serde", "forwarded-header"] }
rustls = { version = "0.23.36", features = ["ring"] }
tower-http = { version = "0.6.8", features = ["cors"]}
dashmap = "7.0.0-rc2"
rpassword = "7.4.0"
reqwest = { version = "0.13.2", features = ["json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
directories = "6.0.0"
tempfile = "3.26.0"
secrecy = "0.10.3"
whoami = "2.1.1"
redis = { version = "1.0.4", features = ["tls-rustls", "json", "uuid"] }
stunclient = "0.4.2"
local-ip-address = "0.6.10"
pingora = { version = "0.7.0", features = ["proxy"] }
http = "1.4.0"
async-trait = "0.1.89"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
opt-level = 3
debug = 0
strip = "symbols"
incremental = false    # NEW: Faster final builds when not incrementally compiling

[profile.dev]
opt-level = 1          # NEW: Faster dev compilation
split-debuginfo = "packed"  # NEW: Smaller debug info

[profile.bench]
inherits = "release"
debug = true           # NEW: Allow profiling
