[package]
name = "phirepass-channel"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
wasm-bindgen = "0.2.114"
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"
phirepass-common = { path = "../common", features = ["protocol"] }
web-sys = { version = "0.3.91", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "CloseEvent",
    "WebSocket",
]}
bytes = { workspace = true }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
