[package]
name = "phirepass-common"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
sysinfo = { version = "0.38.0", optional = true}
get_if_addrs = { version = "0.5.3", optional = true }
env_logger = { workspace = true }
thread-count = { version = "0.3.1", optional = true }
anyhow = { workspace = true }
os_info = { version = "3.14.0", optional = true }
libc = { version = "0.2.182", optional = true }
netstat2 = { version = "0.11.2", optional = true }
mac_address = { version = "1.1.8", optional = true }
bytes = { workspace = true, optional = true }
tokio ={ workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
full = ["env", "logger", "node", "protocol", "stats", "time", "runtime", "token", "server"]
env = []
token = []
server = []
logger = ["dep:serde", "stats"]
node = ["dep:serde", "dep:uuid", "stats"]
runtime = ["dep:tokio"]
protocol = ["dep:serde", "dep:serde_json", "dep:rmp-serde", "dep:bytes"]
stats = [
    "dep:get_if_addrs",
    "dep:mac_address",
    "dep:netstat2",
    "dep:os_info",
    "dep:serde",
    "dep:sysinfo",
    "dep:thread-count",
    "dep:libc"
]
time = []
